--- a/frameworks/projects/Jewel/src/main/sass/components/_layout.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_layout.sass
@@ -44,23 +44,23 @@ $gap-size: 10px !default
 			> *
 				min-height: 100%
 	&.itemsCentered
-		align-items: center
+		align-items: center !important
 	&.itemsTop
-		align-items: flex-start
+		align-items: flex-start !important
 	&.itemsBottom
-		align-items: flex-end
+		align-items: flex-end !important
 
 	// Horizontal Items Align
 	&.itemsLeft
-		justify-content: flex-start
+		justify-content: flex-start !important
 	&.itemsCenter
-		justify-content: center
+		justify-content: center !important
 	&.itemsRight
-		justify-content: flex-end
+		justify-content: flex-end !important
 	&.itemsSpaceBetween
-		justify-content: space-between
+		justify-content: space-between !important
 	&.itemsSpaceAround
-		justify-content: space-around
+		justify-content: space-around !important
 
 	&.itemsExpand
 		> *
